# covid-19-data

./: .flake8  .gitignore  Makefile  analyze_counties.ipynb  analyze_states.ipynb  covid_utils.py  pyproject.toml
covid_19_data/: covid_utils.py
tests/: test_covid_19_data.py
